# ray-v-dask

./: .gitignore  Dockerfile  README.md  dask-docker-compose.yaml  jupyter_notebook_config.py  pyproject.toml  ray-docker-compose.yaml
dask-bigquery-io/: __init__.py  read.py  write.py
notebooks/: 10-minutes-to-dask.ipynb  dask-simple.ipynb  dask.ipynb
notebooks/.ipynb_checkpoints/: ray-checkpoint.ipynb
